made adaptation third screen

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,9 +7,12 @@
     margin: 0 auto;
 }
 
+
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
 @import "blocks/adventages";
-@import "blocks/title";
+@import "blocks/titles";
+@import "blocks/consultation";
+@import "blocks/forms";
 @import "blocks/media";
