--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,9 +1,188 @@
-@media (max-width: 1200px)
+@media (max-width: 1200px) {
     .promo {
         padding: 25px 45px 100px 45px;
+        &__wrapper {
+            margin-top: 65px;
+        }
+        &__button {
+            width: 260px;
+        }
+    }
+    .adventages {
+        padding: 70px 40px 78px 40px;
+    }
+    .consultation {
+        padding-left: 45px;
+    }
+}
+
+@media (max-width: 991px) {
+    .header {
+        img {
+            width: 90%;
+        }
+        &__phone {
+            font-size: 17px;
+            font-weight: 500;
+        }
+    }
+    .promo {
+        &__header {
+            font-size: 37px;
+        }  
+        &__button {
+            width: 250px;
+        } 
+    }
+    .adventages {
+        padding: 60px 0 65px 0;
+        &__wrapper {
+            justify-content: space-around;
+            margin-top: 45px;
+        }
+        &__items {
+            padding-right: 20px;
+            padding-left:20px;
+        }
+    }
+    .title_left {
+        font-size: 27px;
+    }
+    .consultation {
+        &__descr {
+            font-size: 16px;
+        }
+    }
+}
+@media (max-width: 767px) {
+    .header {
+        &__official {
+            display: none;
+        }
+    }
+    .promo {   
+        &__header {
+            font-size: 28px;
+        }
+        &__subheader {
+            font-size: 15px;
+            margin-top: 10px;
+        }
+        &__icons {
+            margin-top: 55px;
+            width: 80%
+        }
+        &__icon {
+            img {
+                width: 35%;
+                height: 35%;
+                margin-bottom: 15px;
+            }
+        }
+    }
+    .button_main {
+        width: 215px;
+        font-size: 14px;
+    }
+    .adventages {
+        &__wrapper {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 10px;
+        }
+        &__icon {
+            margin-top: 35px;
+        }
+        &__header {
+            margin-top: 15px;
+        }
+        &__descr {
+            margin-top: 15px;
+        }
+    }
+    .consultation {
+        padding: 90px 20px 92px 20px; 
+        &__descr {
+            margin-top: 30px;
+            font-size: 16px;
+            text-align: center;
+        }
+    }
+    .title_left {
+        text-align: center;
+        font-size: 21px;
+    }
+    .feed-form {
+        margin: 0 auto;
+        margin-top: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
+    }
+    .button_submit {
+        width: 237px;
+    }
+}
+@media (max-width: 575px) {
+    .promo {
+        padding: 25px 20px 25px 20px;
         &__header {
             font-size: 20px;
         }
+        &__wrapper {
+            margin-top: 50px;
+        }
+        &__subheader {
+            text-align: center;
+        }
+        &__icons {
+            margin-top: 40px;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &__icon {
+            width: 100px;
+            font-size: 12px;
+        }
+        &__link {
+            margin-top: 27px;
+            font-size: 14px;
+        }
     }
-
-/*  padding: 25px 45px 100px 45px; */
+    .header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        &__logo {
+            margin-left: 20px;
+        }
+        &__contacts {
+            margin-top: 20px;
+        }
+    }
+    .button {
+        margin-top: 5px;
+    }
+    .button_main {
+        margin-top: 50px;
+        widows: 200px;
+        height: 38px;
+    }
+    .consultation {
+        padding: 80px 30px 92px 30px;
+        &__descr {
+            padding-left: 0;
+            font-size: 12px;
+        }
+    }
+    .title_left {
+        padding-left: 0;
+        font-size: 15px;
+    }
+    .feed-form {
+        width: 255px;
+    }
+}
