--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
     font-family: "Museo Sans Cyrl", sans-serif;
 }
 .container {
+    position: relative;
     max-width: 950px;
     margin: 0 auto;
 }
@@ -15,4 +16,9 @@
 @import "blocks/titles";
 @import "blocks/consultation";
 @import "blocks/forms";
+@import "blocks/carousel";
+@import "blocks/catalog.scss";
+@import "blocks/reviews.scss";
+@import "blocks/footer.scss";
+@import "blocks/modal.scss";
 @import "blocks/media";
